force-app/main/default/objects/Customer_Update__c/Customer_Update__c.object-meta.xml
<CustomObject>
    <label>Customer Update</label>
    <nameField>
        <displayFormat>CU-{00000}</displayFormat>
        <label>Customer Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Updates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>