force-app/main/default/objects/Customer_Update__c/fields/Finance_Start_Approve__c.field-meta.xml
<CustomField>
    <fullName>Finance_Start_Approve__c</fullName>
    <label>Finance Start Approve</label>
    <type>DateTime</type>
</CustomField>