force-app/main/default/objects/Customer_Update__c/fields/Finance_User__c.field-meta.xml
<CustomField>
    <fullName>Finance_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>