force-app/main/default/objects/Customer_Update__c/fields/Owner_Plant__c.field-meta.xml
<CustomField>
    <fullName>Owner_Plant__c</fullName>
    <formula>Owner:User.Deliver_Plant_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Plant</label>
    <type>Text</type>
</CustomField>