force-app/main/default/objects/Customer_Update__c/fields/PendingDays__c.field-meta.xml
<CustomField>
    <fullName>PendingDays__c</fullName>
    <formula>NOW() - Finance_Start_Approve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PendingDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>